# cat-markdown-code-blocks

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: cat.rs  lib.rs  main.rs  reader.rs
cli/src/cat/: reader.rs
core/: Cargo.toml
core/src/: cat.rs  formatter.rs  lib.rs
shared/: Cargo.toml
shared/src/: formatter.rs  lib.rs  reader.rs
src/: cat.rs  clipboard.rs  formatter.rs  lib.rs  main.rs
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  webpack.config.js
vscode/src/: extension.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
