[package]
edition = "2021"
name = "cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arboard = "3.2.0"
clap = {version = "4.3.0", features = ["derive"]}
shared = {path = "../shared"}
tempfile = "3.5.0"
