[package]
edition = "2021"
name = "cmcb-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
arboard = "3.2.0"
clap = {version = "4.3.0", features = ["derive"]}
cmcb-core = {path = "../core"}
tempfile = "3.5.0"
walkdir = "2.4.0"

[[bin]]
name = "cmcb" # An abbreviation for "cat-markdown-code-blocks"
path = "src/main.rs"
